--- a/templates/community.html
+++ b/templates/community.html
@@ -1,11 +1,47 @@
+<html lang="en">
 <head>
-  <title>CMS Community Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CMS Community Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="/" id="navbar__logo" > <img src="{{ url_for('static', filename='images/image2vector.svg') }}" alt="pic" id="main__img" style="max-width: 8%; height: auto;">
+                City Of Williamston </a>
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="{{ url_for('index') }}" class="navbar__links"> Home </a>
+                </li>
+                <li class="navbar__item">
+                    <a href="{{ url_for('community') }}" class="navbar__links"> Community </a>
+                    
+                </li>
+                <li class="navbar__item">
+                    <a href="{{ url_for('news') }}" class="navbar__links"> News </a>
+                </li>
+                <li class="navbar__btn">
+                    <a href="{{ url_for('login') }}" class="button"> Log In </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!--CMS content-->
+    <h1>Community Page</h1>
   <div id="contentContainer"></div>
 </body>
 
+<!--CMS Connection with Backend-->
 <script>
   // ***replace with your flask server url***
   const serverUrl = 'http://127.0.0.1:8000';
