--- a/templates/community.html
+++ b/templates/community.html
@@ -37,7 +37,7 @@
     </nav>
 
     <!--CMS content-->
-    <h1>Community Page</h1>
+    <h2>Community Page &lpar;click on text to edit&rpar;</h2>
   <div id="contentContainer"></div>
 </body>
 
