--- a/templates/community.html
+++ b/templates/community.html
@@ -38,6 +38,8 @@
 
     <!--CMS content-->
     <h2>Community Page &lpar;click on text to edit&rpar;</h2>
+    
+    <!--Where all the paragraphs and headings pulled from the database go-->
   <div id="contentContainer"></div>
 </body>
 
