--- a/templates/community.html
+++ b/templates/community.html
@@ -37,7 +37,7 @@
     </nav>
 
     <!--CMS content-->
-    <h2>Community Page &lpar;click on text to edit&rpar;</h2>
+    <h2>CMS Community Page &lpar;click on text to edit&rpar;</h2>
     
     <!--Where all the paragraphs and headings pulled from the database go-->
   <div id="contentContainer"></div>
